--- a/index.html
+++ b/index.html
@@ -57,6 +57,13 @@
     
   <!-- ... -->
   </section>
+<section id="loader" class="container d-none">
+  <div class="d-flex justify-content-center">
+    <div class="spinner-border" role="status">
+      <span class="visually-hidden">Loading...</span>
+    </div>
+  </div>
+</section>
 
  
 
