--- a/index.html
+++ b/index.html
@@ -24,7 +24,15 @@
 </div>
 <div class="tab-content" id="myTabContent">
 
-  <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">...</div>
+  <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
+
+    <div>
+      <h4>What are the differences between var, let and const in JavaScript?</h4>
+    <p>JavaScript has three variable declaration statements: var, let and const. The latter two were added in ES6, whereas var existed since previous versions. One of the first things to notice is that const defines constants (i.e. values that will not be reassigned), whereas var and let define variables. Yet, var behaves differently from both let and const in various other ways.
+      
+      Variables declared with var are function scoped, in contrast to variables declared with let or const which are block scoped.</p>
+    </div>
+  </div>
 
 </div>
 
