--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
       
       Variables declared with var are function scoped, in contrast to variables declared with let or const which are block scoped.</p>
     </div>
+    <div>
+      <h4>What are the differences between arrow function and regular function  in JavaScript?</h4>
+      <p>Regular functions created using function declarations or expressions are constructible and callable. Since regular functions are constructible, they can be called using the new keyword. However, the arrow functions are only callable and not constructible, i.e arrow functions can never be used as constructor functions.</p>
+    </div>
+    <div>
+      <h4>What is a template string in JavaScript?</h4>
+      <p>Template strings are a powerful feature of modern JavaScript released in ES6. It lets us insert/interpolate variables and expressions into strings without needing to concatenate like in older versions of JavaScript. It allows us to create strings that are complex and contain dynamic elements</p>
+    </div>
   </div>
 
 </div>
