--- a/index.html
+++ b/index.html
@@ -121,4 +121,8 @@
 <script src="js/news.js"></script>
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
+<!-- <footer class="text-center bg-dark text-white position  end-0 w-100">
+  <h2>Sinbad Hossin</h2>
+  <p>Copyright&copy;2022 </p>
+</footer> -->
 </html>
