--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
  </header>
  <main>
   <div class="container py-5 pb-5" style="height: 5vw;">
-<h3 id=""><span id="demo"></span> Items Category</h3>
+<h3 id=""><span id="demo"></span> Items Category <span id="demo2"></span></h3>
   </div>
 
 
