--- a/index.html
+++ b/index.html
@@ -67,9 +67,15 @@
   <div class="container py-5 pb-5" style="height: 5vw;">
 <h3 id=""><span id="demo"></span> Items Category <span id="demo2"></span></h3>
   </div>
+  <section class="container btnField">
+    <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+      <button class="btn btn-primary me-md-2" type="button">Button</button>
+      <button class="btn btn-primary" type="button">Button</button>
+    </div>
+  </section>
 
 
-  <section id="main-field" class="container">
+  <section id="main-field" class="container content">
     
   <!-- ... -->
   </section>
@@ -121,8 +127,8 @@
 <script src="js/news.js"></script>
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
-<!-- <footer class="text-center bg-dark text-white position  end-0 w-100">
+<footer class="text-center bg-dark text-white position  end-0 w-100">
   <h2>Sinbad Hossin</h2>
   <p>Copyright&copy;2022 </p>
-</footer> -->
+</footer>
 </html>
