--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">Home</button>
   </li>
   <li class="nav-item" role="presentation">
-    <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false">Profile</button>
+    <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false">Blog</button>
   </li>
 </ul>
 </div>
@@ -69,7 +69,7 @@
   </div>
   <section class="container btnField">
     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-      <button class="btn btn-primary me-md-2" type="button">Button</button>
+      <button id="btnSort" class="btn btn-primary me-md-2" type="button">Button</button>
       <button class="btn btn-primary" type="button">Button</button>
     </div>
   </section>
@@ -128,7 +128,7 @@
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 <footer class="text-center bg-dark text-white position  end-0 w-100">
-  <h2>Sinbad Hossin</h2>
+  <h2>Sinbad Hossain</h2>
   <p>Copyright&copy;2022 </p>
 </footer>
 </html>
